# scratch-binary-compat

./: CMakeLists.txt
src/: alib.c  alib.h  atest.c  capp.c  cppapp.cpp
src/clib/: clib.c  clib.h
src/cpplib/: cpplib.cpp  cpplib.h
windll/: CMakeLists.txt  README.md  app.c  liba.c  liba.h  libb.c  libb.h  libc.c  libc.h
